@@ -17,6 +17,7 @@
 #include "../System.h"
 #include "../calcmethod.h"
 #include "../dMatrix.h"
+#include "../TimeCounter.h"
 #include "FittingUtils.h"
 
 namespace mesmer
@@ -392,7 +393,7 @@ namespace mesmer
 		sinfo << "REACTIONS" << ((m_RateUnits == "cm3mole-1s-1") ? " MOLES" : " MOLECULES") << '\n' << endl;
 		for (size_t k = 0; k < m_reactions.size(); ++k) {
 			sinfo << m_reactions[k] << " (+M)  1.00  0.0  0.0" << endl;
-			sinfo << "! Data generated by MESMER " << MESMER_VERSION << " on " << __DATE__ << "." << endl;
+			sinfo << "! Data generated by MESMER " << MESMER_VERSION << " on " << date() ;
 			sinfo << "    TCHEB/ " << formatFloat(m_TMin, 6, 14) << formatFloat(m_TMax, 6, 14) << "/" << endl;
 			sinfo << "    PCHEB/ " << formatFloat(m_CMin, 6, 14) << formatFloat(m_CMax, 6, 14) << "/" << endl;
 			sinfo << "    CHEB/" << setw(6) << m_ExpanSizeT << setw(6) << m_ExpanSizeC << "/" << endl;
